--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ h2 {
 }
 
 body {
-    background-color: rgb(128, 230 , 100);
+    background-color: rgb(255, 153, 204);
 }
 #duda {
     color: red;
@@ -16,3 +16,10 @@ body {
 #duda span {
     color: blue;
 }
+
+p {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+
